samples/captive-portal/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Wed Aug 24 16:25:59 2016
*mangle
:PREROUTING ACCEPT [2329:187452]
:INPUT ACCEPT [1306:120255]
:FORWARD ACCEPT [1023:67197]
:OUTPUT ACCEPT [871:127093]
:POSTROUTING ACCEPT [1032:142642]
:internet - [0:0]
-A PREROUTING -i wlan0 -j internet
-A internet -p tcp --dport 80 -d 10.255.0.1/32 -j RETURN
-A internet -j MARK --set-xmark 0x63/0xffffffff
COMMIT
# Completed on Wed Aug 24 16:25:59 2016
# Generated by iptables-save v1.4.21 on Wed Aug 24 16:25:59 2016
*filter
:INPUT ACCEPT [1532:128341]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1442:194605]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -m mark --mark 0x63 -j DROP
-A INPUT -i tun0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -i tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i tun0 -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i wlan0 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -p udp -m state --state ESTABLISHED -m udp --sport 53 -j ACCEPT
-A FORWARD -i wlan0 -o tun0 -j ACCEPT
-A FORWARD -m mark --mark 0x63 -j DROP
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A FORWARD -i tun0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Wed Aug 24 16:25:59 2016
# Generated by iptables-save v1.4.21 on Wed Aug 24 16:25:59 2016
*nat
:PREROUTING ACCEPT [1133:73837]
:INPUT ACCEPT [37:2228]
:OUTPUT ACCEPT [92:6939]
:POSTROUTING ACCEPT [77:5635]
-A PREROUTING -i wlan0 -p tcp -m mark --mark 0x63 -m tcp --dport 80 -j DNAT --to-destination 10.0.0.1
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o tun0 -j MASQUERADE
COMMIT
# Completed on Wed Aug 24 16:25:59 2016
